--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ node_modules
 .pnp
 .pnp.js
 
+# electron
+.webpack
+
 # testing
 coverage
 
@@ -24,6 +27,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
