On peut pas accéder au main process depuis le code du frontend

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "@TRPI/client",
   "productName": "chess",
   "version": "1.0.0",
   "description": "ElectronApp",
