--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "run:client": "nest start --watch --preserveWatchOutput",
+    "run:web": "nest start --watch --preserveWatchOutput",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
