--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,16 +6,17 @@
   "main": "./index.tsx",
   "types": "./index.tsx",
   "scripts": {
+    "run:web": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@TRPI/client": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@TRPI/client": "*",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
