--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,11 +28,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.3.9",
     "mysql2": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "@TRPI/core-nt" : "*"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
