--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "@TRPI/core-nt": "*"
   },
   "devDependencies": {
     "@TRPI/client": "*",
