--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,6 +34,8 @@
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mysql2": "^3.1.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
