les problèmes commencent !

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@TRPI/core-nt": "*",
+    "@TRPI/core": "*",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
