--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,7 +6,7 @@
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
-    "start:all" : "electron-forge start",
+    "start:all": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -35,6 +35,7 @@
     "electron": "23.0.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0",
