--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,12 +7,20 @@
   "types": "dist/index.js",
   "scripts": {
     "build": "tsc --build",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "tsconfig": "*",
-    "typescript": "^4.5.2"
+    "typescript": "^5.0.2"
   }
 }
