--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ server:
 front:
   stage: front
   script:
+    - sudo apt-get install openssh-client
     - ssh vmProjetIntegrateurgrp0-1
     - echo 'front build'
   only:
