--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
 stages:
-  - ssh-prepare
   - server
   - front
   - deploy
@@ -7,8 +6,9 @@ stages:
 ssh-prepare:
   stage: ssh-prepare
   script:
-    - echo 'ssh test'
-    - apt-get update && apt-get install -y openssh-client
+    - echo 'ssh-connection'
+    - apt-get update && apt-get upgrade
+    - apt-get install openssh-client
     - mkdir -p ~/.ssh && chmod 700 ~/.ssh
     - echo '' > ~/.ssh/config
     - cp artifacts/config ~/.ssh/config
@@ -34,14 +34,17 @@ server:
   only:
     changes:
       - "apps/backend/**/*"
+  dependencies:
+    - ssh-prepare
 
 front:
   stage: front
   script:
-    - apt-get update && apt-get upgrade
-    - apt-get install openssh-client
+
     - ssh vmProjetIntegrateurgrp0-1
     - echo 'front build'
   only:
     changes:
       - "apps/frontend/**/*"
+  dependencies:
+    - ssh-prepare
