--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ ssh-prepare:
   stage: ssh-prepare
   script:
     - echo 'ssh-connection'
-    - apt-get update && apt-get upgrade
+    - apt-get update && apt-get upgrade -y
     - apt-get install openssh-client
     - mkdir -p ~/.ssh && chmod 700 ~/.ssh
     - echo '' > ~/.ssh/config
@@ -33,6 +33,9 @@ server:
   only:
     changes:
       - apps/backend/**/*
+  dependencies:
+    - ssh-prepare
+
 front:
   stage: front
   script:
