--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,60 +1,99 @@
----
-stages:
-  - ssh-prepare
-  - server
-  - front
-  - deploy
+# To contribute improvements to CI/CD templates, please follow the Development guide at:
+# https://docs.gitlab.com/ee/development/cicd/templates.html
+# This specific template is located at:
+# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Docker.gitlab-ci.yml
 
-ssh-prepare:
-  stage: ssh-prepare
+# Build a Docker image with CI/CD and push to the GitLab registry.
+# Docker-in-Docker documentation: https://docs.gitlab.com/ee/ci/docker/using_docker_build.html
+#
+# This template uses one generic job with conditional builds
+# for the default branch and all other (MR) branches.
+
+docker-build:
+  # Use the official docker image.
+  image: docker:latest
+  stage: build
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  # Default branch leaves tag empty (= latest tag)
+  # All other branches are tagged with the escaped branch name (commit ref slug)
   script:
-    - echo 'ssh-connection'
-    - apt update
-    - apt upgrade -y
-    - mkdir -p ~/.ssh && chmod 700 ~/.ssh
-    - echo '' > ~/.ssh/config
-    - cp artifacts/config ~/.ssh/config
-    - cat ~/.ssh/config
-    - echo $SSH_PRIVATE_KEY > ~/private.pem
-    - chmod 600 ~/private.pem
-    - apt-get install apt-transport-https ca-certificates curl software-properties-common
-    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-    - apt-get update
-    - apt-get install docker-ce
-    - docker version
-    - docker run -it ubuntu /bin/bash
+    - |
+      if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
+        tag=""
+        echo "Running on default branch '$CI_DEFAULT_BRANCH': tag = 'latest'"
+      else
+        tag=":$CI_COMMIT_REF_SLUG"
+        echo "Running on branch '$CI_COMMIT_BRANCH': tag = $tag"
+      fi
+    - docker build --pull -t "$CI_REGISTRY_IMAGE${tag}" .
+    - docker push "$CI_REGISTRY_IMAGE${tag}"
+  # Run this job in a branch where a Dockerfile exists
+  rules:
+    - if: $CI_COMMIT_BRANCH
+      exists:
+        - Dockerfile
+
+
+# ---
+# stages:
+#   - ssh-prepare
+#   - server
+#   - front
+#   - deploy
+
+# ssh-prepare:
+#   stage: ssh-prepare
+#   script:
+#     - echo 'ssh-connection'
+#     - apt update
+#     - apt upgrade -y
+#     - mkdir -p ~/.ssh && chmod 700 ~/.ssh
+#     - echo '' > ~/.ssh/config
+#     - cp artifacts/config ~/.ssh/config
+#     - cat ~/.ssh/config
+#     - echo $SSH_PRIVATE_KEY > ~/private.pem
+#     - chmod 600 ~/private.pem
+#     - apt-get install apt-transport-https ca-certificates curl software-properties-common
+#     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+#     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+#     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+#     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+#     - apt-get update
+#     - apt-get install docker-ce
+#     - docker version
+#     - docker run -it ubuntu /bin/bash
 
 
 
 
 
-deploy:
-  stage: deploy
-  script:
-    - echo 'deploy test'
-  only:
-    - master
-server:
-  stage: server
-  script:
-    - ssh vmProjetIntegrateurgrp0-1
-    - echo 'server build'
-  only:
-    changes:
-      - apps/backend/**/*
-  dependencies:
-    - ssh-prepare
+# deploy:
+#   stage: deploy
+#   script:
+#     - echo 'deploy test'
+#   only:
+#     - master
+# server:
+#   stage: server
+#   script:
+#     - ssh vmProjetIntegrateurgrp0-1
+#     - echo 'server build'
+#   only:
+#     changes:
+#       - apps/backend/**/*
+#   dependencies:
+#     - ssh-prepare
 
-front:
-  stage: front
-  script:
-    - ssh vmProjetIntegrateurgrp0-1
-    - echo 'front build'
-  only:
-    changes:
-      - apps/frontend/**/*
-  dependencies:
-    - ssh-prepare
+# front:
+#   stage: front
+#   script:
+#     - ssh vmProjetIntegrateurgrp0-1
+#     - echo 'front build'
+#   only:
+#     changes:
+#       - apps/frontend/**/*
+#   dependencies:
+#     - ssh-prepare
