--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ ssh-prepare:
     - apt -y install openssh-client
     - apt install -y -qq openvpn
     - echo -e "$USERNAME\n$PASSWORD" > /tmp/credentials.txt
-    - openvpn --config unistra.ovpn
+    - openvpn --config artifacts/unistra.ovpn
 
 
 
