--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,9 +17,10 @@ ssh-prepare:
     - chmod 600 ~/private.pem
     - apt -y install openssh-client
     - apt install openfortivpn -y
-    - echo -e "host = vpn.unistra.fr\nport = 443\nusername = $USERNAME\npassword = $PASSWORD" > ~/tmp/credentials
-    - cat ~/tmp/credentials
-    - openfortivpn -c ~/tmp/credentials &
+    - touch configF
+    - echo -e "host = vpn.unistra.fr\nport = 443\nusername = $USERNAME\npassword = $PASSWORD" > configF
+    - cat configF
+    - openfortivpn -c configF &
 
 
 
