--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,8 @@ frontend:
 backend:
   stage: build
   script:
+    - echo $CI_PIPELINE_SUCCESS
+    - echo $CI_COMMIT_BRANCH
     - yarn workspace @TRPI/backend build
     - rm -R ./backend-build && mkdir ./backend-build/
     - cp -r ./apps/backend/dist  ./backend-build/ || true
@@ -39,6 +41,8 @@ backend:
 
 deploy:
   stage: deploy
+  rules:
+    - if: '$CI_PIPELINE_SUCCESS && $CI_COMMIT_BRANCH == "test/dep"'
   script:
     - export RELEASE_BRANCH_NAME="release-$(printf '%02d' $((10#${CI_COMMIT_REF_NAME#release-}+1)))"
     - git checkout -b $RELEASE_BRANCH_NAME
