--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,45 +1,54 @@
-image: node:19.6
-
-before_script:
-  - apt-get update && apt-get install -y curl
-  - curl -sL https://deb.nodesource.com/setup_19.x | bash -
-  - apt-get install -y nodejs
-  - yarn install -y
-  - mkdir front-build/
-  - mkdir core-build/
-  - mkdir backend-build/
-  - mkdir client-build/
-  - yarn workspace @TRPI/core build
-  - cp -r ./packages/core/dist ./core-build/ || true
-  - echo "core build"
-  - ls ./core-build
-
 stages:
-  - production
-  - predev
+  - test-stage
 
-predev:
-  stage: predev
-  only:
-    - pre-dev
+job1:
+  stage: test-stage
   script:
-    - export RELEASE_BRANCH_NAME="release-$(printf '%02d' $((10#${CI_COMMIT_REF_NAME#release-}+1)))"
-    - yarn workspace @TRPI/core run test --cov
+    - echo "test"
+
+
+# image: node:19.6
+
+# before_script:
+#   - apt-get update && apt-get install -y curl
+#   - curl -sL https://deb.nodesource.com/setup_19.x | bash -
+#   - apt-get install -y nodejs
+#   - yarn install -y
+#   - mkdir front-build/
+#   - mkdir core-build/
+#   - mkdir backend-build/
+#   - mkdir client-build/
+#   - yarn workspace @TRPI/core build
+#   - cp -r ./packages/core/dist ./core-build/ || true
+#   - echo "core build"
+#   - ls ./core-build
+
+# stages:
+#   - production
+#   - predev
+
+# predev:
+#   stage: predev
+#   only:
+#     - pre-dev
+#   script:
+#     - export RELEASE_BRANCH_NAME="release-$(printf '%02d' $((10#${CI_COMMIT_REF_NAME#release-}+1)))"
+#     - yarn workspace @TRPI/core run test --cov
 
 
 
-production:
-  stage: production
-  only:
-    - dev
-  script:
-    - export RELEASE_BRANCH_NAME="release-$(printf '%02d' $((10#${CI_COMMIT_REF_NAME#release-}+1)))"
-    - git checkout -b $RELEASE_BRANCH_NAME
-    - yarn workspace @TRPI/frontend build
-    - yarn workspace @TRPI/backend build
-    - git add .
-    - git commit -m "New release ${CI_COMMIT_SHORT_SHA}"
-    - git push origin $RELEASE_BRANCH_NAME
+# production:
+#   stage: production
+#   only:
+#     - dev
+#   script:
+#     - export RELEASE_BRANCH_NAME="release-$(printf '%02d' $((10#${CI_COMMIT_REF_NAME#release-}+1)))"
+#     - git checkout -b $RELEASE_BRANCH_NAME
+#     - yarn workspace @TRPI/frontend build
+#     - yarn workspace @TRPI/backend build
+#     - git add .
+#     - git commit -m "New release ${CI_COMMIT_SHORT_SHA}"
+#     - git push origin $RELEASE_BRANCH_NAME
 
 # backend:
 #   stage: build
