--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ job1:
     - ls
     - echo "test"
     - echo "test 2 ?"
-    - sudo -u ubuntu screen -S depS -X stuff "ls^M"
+    - sudo -u ubuntu screen -S depS -X stuff "ls > output.txt^M"
+    - cat output.txt
 
 
 # image: node:19.6
