--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ stages:
 cache:
   key: ${CI_COMMIT_REF_SLUG}-dependencies
   paths:
+    - .yarn/cache
     - node_modules/
     - apps/backend/node_modules/
     - apps/client/node_modules/
@@ -19,6 +20,7 @@ cache:
     - packages/core/node_modules/
     - packages/eslint-config-custom/node_modules/
   policy: pull-push
+  untracked: true
 
 build_core:
   stage: build
