--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,13 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@TRPI/core": "*",
     "@types/lodash": "^4.14.191",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "socket.io-client": "^4.6.1",
-    "@TRPI/core": "*"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@TRPI/client": "*",
